build: 공통 gradle 설정 분리 및 중복 코드 정리
공통 gradle 설정을 최상위로 분리하여 중복된 플러그인 및 설정을 정리하고, 하위 프로젝트별로 필요한 의존성만 남김. 코드 간소화로 관리 용이성이 향상됨.